@@ -6,11 +6,6 @@
 
 
 #------------------------------------------------------------------------------
-#       Message level
-#------------------------------------------------------------------------------
-  MSGLEVEL  VERBOSE            # normal/verbose/debug
-
-#------------------------------------------------------------------------------
 #       CPU Configuration
 #------------------------------------------------------------------------------
 
@@ -86,6 +81,12 @@
   CNSLPORT  3270                # TCP port number to which consoles connect
 # SHRDPORT  3990                # TCP port number for sharing DASD images on
                                 # this instance of Hercules (inactive)
+
+#------------------------------------------------------------------------------
+#       Message level
+#------------------------------------------------------------------------------
+  MSGLEVEL  VERBOSE            # normal/verbose/debug
+
 
 #   .-----------------------Device number
 #   |     .-----------------Device type
